re PR c/37645 (ICE with weakref attribute)

PR c/37645
	* c-common.c (handle_weakref_attribute): Ignore the attribute unless
	the decl is a VAR_DECL or FUNCTION_DECL.

	* gcc.dg/pr37645.c: New test.

From-SVN: r140681